[package]
name = "rustybox-core"
version = "0.3.0"
edition = "2021"
publish = false
# Pure MIT/Apache edition: uses only permissive backends (uutils, ripgrep libs)
# and rustybox's own dispatch/grep/find code. No BusyBox (GPL) code is compiled.
license = "MIT"
description = "rustybox core — a memory-safe, MIT-licensed multicall busybox-style toolbox built on uutils + ripgrep libraries"

[[bin]]
name = "rustybox-core"
path = "main.rs"

[features]
default = ["modern-gzip", "modern-bzip2", "modern-xz", "modern-tar"]
modern-gzip = []
modern-bzip2 = []
modern-xz = []
modern-tar = []

[dependencies]
libc = "0.2"
uu_base64 = "0.9"
uu_basename = "0.9"
uu_cat = "0.9"
uu_chmod = "0.9"
uu_chown = "0.9"
uu_cksum = "0.9"
uu_comm = "0.9"
uu_cp = "0.9"
uu_cut = "0.9"
uu_date = "0.9"
uu_dd = "0.9"
uu_df = "0.9"
uu_dirname = "0.9"
uu_du = "0.9"
uu_echo = "0.9"
uu_env = "0.9"
uu_expand = "0.9"
uu_factor = "0.9"
uu_fold = "0.9"
uu_head = "0.9"
uu_id = "0.9"
uu_ln = "0.9"
uu_ls = "0.9"
uu_mkdir = "0.9"
uu_mktemp = "0.9"
uu_mv = "0.9"
uu_nice = "0.9"
uu_nl = "0.9"
uu_nohup = "0.9"
uu_nproc = "0.9"
uu_paste = "0.9"
uu_printf = "0.9"
uu_pwd = "0.9"
uu_readlink = "0.9"
uu_realpath = "0.9"
uu_rm = "0.9"
uu_rmdir = "0.9"
uu_seq = "0.9"
uu_shuf = "0.9"
uu_sleep = "0.9"
uu_sort = "0.9"
uu_split = "0.9"
uu_stat = "0.9"
uu_sum = "0.9"
uu_tac = "0.9"
uu_tail = "0.9"
uu_tee = "0.9"
uu_timeout = "0.9"
uu_touch = "0.9"
uu_tr = "0.9"
uu_truncate = "0.9"
uu_uname = "0.9"
uu_unexpand = "0.9"
uu_uniq = "0.9"
uu_wc = "0.9"
uu_yes = "0.9"
uu_tty = "0.9"
uu_hostid = "0.9"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
walkdir = "2"
globset = "0.4"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
flate2 = "1"
bzip2 = "0.5"
xz2 = "0.1"
tar = "0.4"
nix = { version = "0.29", features = ["net", "ioctl", "mount", "user", "fs", "process", "signal", "term"] }

